--- a/Rmds/10_Load.Rmd
+++ b/Rmds/10_Load.Rmd
@@ -51,8 +51,8 @@ Expand to read about <b>library size, MDS and PCA plots</b></summary>
 
 * Raw library sizes to see if they are balanced. 
 `r NOTE_bx` Ideally, library sizes must be similar in all samples to avoid bias in type I error rate and FDR (_false discovery rate_, the type II error rate). Methods better supporting unequal library sizes are `limma::voom()` and `stats::glm()` [@Law2014tt]. They will be used for differential expression in this script.
-* _Multidimensional scaling_ (**[MDS]**) scatterplot visualizes the relative differences in transcriptional profile between the samples. It uses differences in expression profiles between different samples distances calculated on the `top = 500` genes with largest standard deviations across the samples to reduce de dimensionality to two dimensions in an iterative process. Replicates are expected to form clusters, that is, [the distance between replicates is shorter than with other samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#multidimensional-scaling). Based on the `limma::plotMDS()` function [@Ritchie2015aa], this is the **best way to verify sample grouping** when replicates of different treatments are compared since it provides a type of unsupervised clustering of the samples. It is useful for examining how different are the profiles produced by different experimental factors and for identifying unexpected patterns.
-* _Pincipal components analysis_ (**[PCA]**) [@Jolliffe2016dp, @Ringner2008aa] of correlation or covariance values is based on the user-defined function `PlotMyPCA()` that is a mere wrapper of the R function `stats::prcomp()`. It is an easy and fast way to analyse data by a dimensional reduction of multivariate data, but based on the variance. Since replicates should be correlate, they are expected to form clusters in a [PCA] because the [principal components are linear combinations of the original variables that maximise the dispersion of samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#principal-components-analysis).
+* The _Multidimensional scaling_ (**[MDS]**) scatterplot use a distance matrix to visualise the relative differences in transcriptional profile between the samples. It uses differences in expression profiles between different samples distances calculated on the `top = 500` genes with largest standard deviations across the samples in an iterative process. Replicates are expected to form clusters, that is, [the distance between replicates is shorter than with other samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#multidimensional-scaling). Based on the `limma::plotMDS()` function [@Ritchie2015aa], [MDS] is the **best way to verify sample grouping** when replicates of different treatments are compared since it provides a type of unsupervised clustering of the samples. It is useful for examining how different are the profiles produced by different experimental factors and for identifying unexpected patterns.
+* _Pincipal components analysis_ (**[PCA]**) is an easy and fast way to analyse data by a dimensional reduction of multivariate data, but based on the variance [@Jolliffe2016dp,@Ringner2008aa]. Since replicates should correlate, they are expected to form clusters in a [PCA] because the [principal components are linear combinations of the original variables that maximise the dispersion of samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#principal-components-analysis). The representation shown is based on the RSeqFlow-defined function `PlotMyPCA()` that is a mere wrapper of the R function `stats::prcomp()`.
 
 </details> 
 [END EXPANDIBLE]: #
