--- a/Rmds/80_GLM.Rmd
+++ b/Rmds/80_GLM.Rmd
@@ -3,19 +3,19 @@
 [START EXPANDIBLE]: #
 `r EXPAND_bx` Expand to read about <b>GLMs and RNA-seq</b></summary>
 
-[DE] parametric tests require methods based on [binomial negative][NB] generalized linear models that take advantage of the estimates of dispersion and logarithmic fold changes, their main issue being the false positive. This issue has been recently investigated [@Li2022cf] for the most popular methods based on parametric distributional assumptions `DESeq2` and [edgeR], as well as `limma-voom`, `NOISeq`, `dearseq` and Wilcoxon rank-sum test. The only method that maintains the FDR control is the Wilcoxon rank-sum test, while `DESeq2` and `edgeR` sometimes exceed 20% of false positives, a rate that increases with the number of samples since they are very affected by the existence of outliers. In extreme cases, `DESeq2` and  `edgeR` had only an 8% overlap in the DEGs they identified. 
+[DE] parametric tests require methods based on [binomial negative][NB] generalized linear models that take advantage of the estimates of dispersion and logarithmic fold changes, their main issue being the false positive. This issue has been recently investigated [@Li2022cf] for the most popular methods based on parametric distributional assumptions [DESeq2] and [edgeR], as well as `[limma]-voom`, `NOISeq`, `dearseq` and Wilcoxon rank-sum test. The only method that maintains the [FDR] control is the Wilcoxon rank-sum test, while [DESeq2] and [edgeR] sometimes exceed 20% of false positives, a rate that increases with the number of samples since they are very affected by the existence of outliers. In extreme cases, [DESeq2] and [edgeR] had only an 8% overlap in the DEGs they identified. 
 
 `r NOTE_bx`
 The recommendation of [@Li2022cf] is to **use non-parametric Wilcoxon rank-sum test with large sample sizes**, with _large_ meaning $>10$ samples per experimental condition, since it is **more robust to outliers**. The Wilcoxon test developed in 1956 [@WILCOXON1946wa] is also known as the Mann-Whitney test, developed in 1947 [@Mann-Withney1947]. Wilcoxon rank-sum test is known to be **powerful for skewed distributions**, as is the case with gene expression counts measured by RNA-seq.
 </div>
 
-Non-parametric approaches, such as `NOISeq` `SAMseq` or the Wilcoxon test require more replicates (usually 5 or more) than parametric methods (usually 3, but some of them can work with only 1 replicate [@GonzalezGayte2017]). The most frequent case when studying non-model species is that the number of replicates per experimental condition is not so high (usually 3 or less than 5) that allows a non-parametric study. Therefore, the parametric analysis that provides the best results in the recent study of @Li2022cf is the **combination of `limma + voom`** (very similar to the `limma-trend`, but more powerful). This is a [GLM] approach that extends classical [linear models](#differential-expression) to [non-normally distributed response data](https://online.stat.psu.edu/stat504/lesson/6/6.1) (including linear regression, logistic regression and Poisson regression) [@Nelder1972GLM], where `glm()` is used to fit [GLM]s on the variable whose heteroskedascity has been corrected, while `lm()` is used to fit linear models (regression, and analysis of variance and covariance). 
+Non-parametric approaches, such as `NOISeq` `SAMseq` or the Wilcoxon test require more replicates (usually 5 or more) than parametric methods (usually 3, but some of them can work with only 1 replicate [@GonzalezGayte2017]). The most frequent case when studying non-model species is that the number of replicates per experimental condition is not so high (usually 3 or less than 5) that allows a non-parametric study. Therefore, the parametric analysis that provides the best results in the recent study of @Li2022cf is the **combination of `[limma] + voom`** (very similar to the `limma-trend`, but more powerful). This is a [GLM] approach that extends classical [linear models](#differential-expression) to [non-normally distributed response data](https://online.stat.psu.edu/stat504/lesson/6/6.1) (including linear regression, logistic regression and Poisson regression) [@Nelder1972GLM], where `glm()` is used to fit [GLM]s on the variable whose heteroskedascity has been corrected, while `lm()` is used to fit linear models (regression, and analysis of variance and covariance). 
 
-Since RNA-seq data usually have heterogeneous sample sizes and violate these parametric requirements of [linear regression](#differential-expression), they would lead to ill-behaved _P_-values and likely failed FDR control [@BenjaminiHochberg1995ps]. Obtaining [DEG]s using [edgeR] and [limma] libraries can be addressed by three different parametric approaches:
+Since RNA-seq data usually have heterogeneous sample sizes and violate these parametric requirements of [linear regression](#differential-expression), they would lead to ill-behaved _P_-values and likely failed [FDR] control [@BenjaminiHochberg1995ps]. Obtaining [DEG]s using [edgeR] and [limma] libraries can be addressed by three different parametric approaches:
 
 * **Exact _t_-test** is based on the Student's _t_-test [@Robinson2008ro] for a difference in mean between two groups of negative binomial random variables. It depends on [`exactTest()` function](https://www.r-bloggers.com/2020/09/exact-tests-and-plots-with-edger-basic-differential-expression-analysis/). It is rapid and easy-to-do, but **many false positive**s are obtained, as revealed by [@Li2022cf].
-* **Quasi-likelihood F-tests (QLF)** performs the quasi-likelihood (QL) F-test [@Lund2012; @Lun2016] based on [GLM], with some enhancements and slight differences on trend and FDR methods. In fact, it performs a _genewise negative binomial generalized linear model with quasi-likelihood tests_ with `glmQLFit()` (preferred over `glmLRT()`) and `glmQLFTest()` (or the more rigurous `glmTreat()`) functions. Since they provide the most accurate type I error control and adds a bayesian squeezing of data from [limma] package, the results are better than exact tests for RNA-seq under the assumption that genes should exhibit a [binomial negative][NB] distribution, as [indicated above](#binomialNegative).
-* A pure **generalized linear model (GLM)** based on `lmFit()` and `eBayes()`, or even better `treat()`, that gives the **lowest number of false positives** [@Law2014tt; @Li2022cf].
+* **Quasi-likelihood F-tests (QLF)** performs the quasi-likelihood (QL) F-test [@Lund2012; @Lun2016] based on [GLM], with some enhancements and slight differences on trend and [FDR] methods. In fact, it performs a _genewise negative binomial generalized linear model with quasi-likelihood tests_ with `glmQLFit()` (preferred over `glmLRT()`) and `glmQLFTest()` (or the more rigurous `glmTreat()`) functions. Since they provide the most accurate type I error control and adds a bayesian squeezing of data from [limma] package, the results are better than exact tests for RNA-seq under the assumption that genes should exhibit a [binomial negative][NB] distribution, as [indicated above](#binomialNegative).
+* A pure **generalized linear model (GLM)** based on `lmFit()` and `eBayes()`, or even better `treat()`, that gives the **lowest number of false positives** [@Law2014tt; @Li2022cf]. The [GLM] is thought to deal with heterogeneity in variance (heteroskedascity) better than pure linear models.
 
 Benefits of the `limma + voom` approach combimed with `treat()` function are the following:
 
@@ -62,7 +62,7 @@ The following limitations have been described in detail in [@Amrhein2017aa,@Amrh
 * **$P$-values**: they ~~do not measure the probability that the studied hypothesis is true, or the probability that the data were produced by random chance alone~~, but the probability of the test statistic assuming the null hypothesis. In fact, _P-values depend on your data and are not reliable_.
 * **Confidence intervals**: many researchers incorrectly believe that ~~the confidence interval from an isolated experiment has a 95% chance of containing the true value, or intervals that will contain the parameter with a given probability~~. They simply are a frequency description of samples from a population in large-scale resampling of this population. Be aware that _many researchers wrongly interpret confidence intervals as Bayesian credible intervals_.
 * **Statistical significance**: it was introduced as a tool to suggest interesting results and perform further confirmatory research and not as ~~a true-difference/no-difference decision boundary~~. Subsequently, the variables selected as being truly changed are considered to be scientifically significant and merit more research. _The absence of statistical significance does not indicate an absence of an effect_. And the _presence of statistical significance does not mean scientific significance_.
-* **False discovery rate (FDR)** is usually set to control the ratio of false positives when multiple hypothesis tests are performed, such as in omics studies. But this approach requires independent variables, which is not the case, since many genes/proteins are acting on other genes/proteins, and _FDR test statistic cannot be used since it would drive and potentially bias the extraction of the biological information contained in the omic data_.
+* **False discovery rate ([FDR])**, also known as the _type I error rate_, is usually set to control the ratio of false positives when multiple hypothesis tests are performed, such as in omics studies. But this approach requires independent variables, which is not the case, since many genes/proteins are acting on other genes/proteins, and _[FDR] test statistic cannot be used since it would drive and potentially bias the extraction of the biological information contained in the omic data_.
 
 
 In fact, in omics sciences, the frequent misuse of _P_-values is limiting the generation of robust scientific knowledge [@Montero2023aa,@Amrhein2019]:
