--- a/Rmds/130_kmeans.Rmd
+++ b/Rmds/130_kmeans.Rmd
@@ -43,12 +43,11 @@ Let's now calculate the _k_ from the **best-of-30** methods:
 # bext-of-30 for kmeans
 nb <- NbClust(m.ctf.std, 
               distance = "euclidean", 
-              min.nc = 2,
-              max.nc = 10, 
+              min.nc = MIN_NC,   # default values defined in chunk k-30
+              max.nc = MAX_NC,
               index = "all",
               method = "kmeans")
-# graphical representation that usually crashes
-# fviz_nbclust(nb)
+# fviz_nbclust(nb)   # graphical representation that usually crashes
 
 # data from the barplot
 table(nb$Best.nc[1,])
